Improved landing and form pages

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -29,29 +29,41 @@
                 </div>
                 <!-- /top nav -->
 
-<div class="row col-md-12">
+<div class="row col-md-12" style="max-height: 75%;overflow:hidden">
   <div class="col-md-1 "> </div>
   <div class ="col-md-10">
-	 <img src="help.jpg" class ="img-responsive" >
+	 <img src="help.jpg" class ="img-thumbnail">
   </div>
-  <div class="col-md-1 ">Concrastinator</div>
 </div>
-  <div class="col-md-12">
-	<h1 align="center">Start today, finish in time</h1>
+    <div class="lead text-center"><h1>Concrastinator</h1></div>
+    <div class="lead text-center"><h2>Start today, finish in time</h2></div>
+<hr class="half-rule">
+
+<div class="lead text-center">A simple online tool to keep you focused on your tasks and stop procrastinating.</div> 
+<hr class="half-rule">
+<div class="row" style="max-height:40%;overflow:hidden">
+  <div class="col-md-4">
+    <img src="distractions.jpg" class="img-rounded" style="max-width: 100%"> </img>
   </div>
-<br> <br>
-<div class="row col-md-12">
-<br>
-	<div class="col-md-4">
-	 <img src="distractions.jpg" class="img-responsive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel molestie enim. </img>
-	</div>
-
-	<div class="col-md-4">
-	<img src="forgeting.jpg" class="img-responsive">Curabitur fermentum fermentum ipsum a scelerisque. Morbi nunc diam, rhoncus ac dui vel, dignissim bibendum elit. Vivamus nulla felis, dapibus eget ante eu, molestie aliquam tortor.</img>
-	</div>
-
-	<div class="col-md-4">
-	 <img src="agenda.jpg" class="img-responsive">Mauris scelerisque orci vel urna lacinia accumsan. Vivamus maximus ullamcorper finibus. Etiam facilisis nunc eget dui placerat ultrices. </img>
-	</div>
-
+  <div class="col-md-4">
+    <img src="forgeting.jpg" class="img-rounded" style="max-width: 100%"> </img>
+  </div>
+  <div class="col-md-4">
+    <img src="start-now.png" class="img-rounded" style="max-width: 100%"> </img>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h3 align="center">Multi-task smarter, not harder.</h3>
+      <div class="lead text-center">Some tasks are more important than others. Assign priorities to keep critical tasks above others, and filter by tag to group them by categories.</div>
+    </h3>
+  </div>
+  <div class="col-md-4">
+    <h3 align="center">Never forget, we remember for you.</h3>
+    <div class="lead text-center">By creating tasks, you will be reminded through your e-mail account as the deadline approaches. We keep everything in track, no memory required.</div>
+  </div>
+  <div class="col-md-4">
+    <h3 align="center">Jump start to complete your goals.</h3>
+    <div class="lead text-center">Suggestions for your tasks give you the first step, no need to start from scratch. Procrastinating the beginning of your task is no longer an option!</div>
+  </div>
 </div>
