--- a/blog/app/views/users/new.html.erb
+++ b/blog/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Sign up') %>
-<legend><center>Sign Up</center></legend>
-
+<h3><center>Sign Up</center></h3>
+<hr class="half-rule">
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
@@ -17,7 +17,7 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-
+      <hr class="half-rule">
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
   </div>
