--- a/blog/app/views/users/signup.html.erb
+++ b/blog/app/views/users/signup.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
-
+<hr class="half-rule">
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
@@ -15,7 +15,7 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
-
+      <hr class="half-rule">
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
   </div>
