--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -52,7 +52,7 @@
     <img src="start-now.png" class="img-rounded" style="max-width: 100%"> </img>
   </div>
 </div>
-<div class="row">
+<!-- <div class="row"> -->
   <div class="col-md-4">
     <h3 align="center">Multi-task smarter, not harder.</h3>
       <div class="lead text-center">Some tasks are more important than others. Assign priorities to keep critical tasks above others, and filter by tag to group them by categories.</div>
@@ -66,4 +66,4 @@
     <h3 align="center">Jump start to complete your goals.</h3>
     <div class="lead text-center">Suggestions for your tasks give you the first step, no need to start from scratch. Procrastinating the beginning of your task is no longer an option!</div>
   </div>
-</div>
+<!-- </div> --> 
