A functional delete - Final Commit

--- a/blog/app/views/shared/_priority_form.html.erb
+++ b/blog/app/views/shared/_priority_form.html.erb
@@ -4,5 +4,5 @@
   		<%= f.text_field :title, placeholder: "New priority...", class:'form-control' %>
     	<%= f.number_field :rank, in: 1..5, step: 1, placeholder: "1", class:'form-control'%>
   <!-- </div> -->
-  <%#= f.submit "Post", class: "btn btn-primary" %>
+  <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
