--- a/blog/app/views/tasks/_task.html.erb
+++ b/blog/app/views/tasks/_task.html.erb
@@ -33,7 +33,7 @@
     <%= task.content %>
   </div>
   <div class="panel-footer" style="<%= isExpired ? 'background-color:#C8C8C8;' : ''%>">
-    <strong>Priority:</strong> <%= task.priority.title %>, <strong>Tag:</strong> <%= task.tag.title %>. 
+    <strong>Priority:</strong> <%= task.priority.title %>. <strong>Tag:</strong> <%= task.tag.title %>. 
   </div>
 </div>
 <div id="google_task_<%=task.id%>"> </div>
